<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.java.android.lab03.PrincipalActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" />    
    
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:columnCount="7"
        android:rowCount="7" >

        <Button
            android:id="@+id/button1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/button2"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/button3"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/button4"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/btnAd" />

        <Button
            android:id="@+id/button5"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/button6"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/button7"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/button8"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/btnSub" />

        <Button
            android:id="@+id/button9"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/button10"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/button11"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/button12"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/btnDiv" />

        <Button
            android:id="@+id/button13"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/button14"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/btnMult" />

    </GridLayout>

</RelativeLayout>
